--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+# Project-specific ignores
+public/data/
+RTDB/
+database.rules.json
